--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.5
   geolocator: ^14.0.1
   geocoding: ^4.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
